@startuml

class AdoptionRequest {
  - int idAdoption
  - User user
  - Animal animal
  - Date requestDate
  - String status
  + AdoptionRequest(int idAdoption, User user, Animal animal, Date requestDate, String status)
  + getIdAdoption(): int
  + setIdAdoption(int idAdoption)
  + getUser(): User
  + setUser(User user)
  + getAnimal(): Animal
  + setAnimal(Animal animal)
  + getRequestDate(): Date
  + setRequestDate(Date requestDate)
  + getStatus(): String
  + setStatus(String status)
  + toString(): String
}

class Animal {
  - int idAnimal
  - String name
  - String species
  - int age
  - String gender
  - String description
  - String status
  + Animal(int idAnimal, String name, String species, int age, String gender, String description, String status)
  + Animal(String name, String species, int age, String gender, String description, String status)
  + Animal()
  + getIdAnimal(): int
  + setIdAnimal(int idAnimal)
  + getName(): String
  + setName(String name)
  + getSpecies(): String
  + setSpecies(String species)
  + getAge(): int
  + setAge(int age)
  + getGender(): String
  + setGender(String gender)
  + getDescription(): String
  + setDescription(String description)
  + getStatus(): String
  + setStatus(String status)
  + toString(): String
}

class LoginDTO {
  - String email
  - String password
  - String role
  - String token
  + LoginDTO()
  + LoginDTO(String email, String password, String role, String token)
  + getEmail(): String
  + setEmail(String email)
  + getPassword(): String
  + setPassword(String password)
  + getRole(): String
  + setRole(String role)
  + getToken(): String
  + setToken(String token)
}

class User {
  - int idUser
  - String email
  - String password
  - String role
  + User(int idUser, String email, String password, String role)
  + User()
  + getIdUser(): int
  + setIdUser(int idUser)
  + getEmail(): String
  + setEmail(String email)
  + getPassword(): String
  + setPassword(String password)
  + getRole(): String
  + setRole(String role)
  + toString(): String
}

AdoptionRequest --> User : user
AdoptionRequest --> Animal : animal

@enduml
A`